--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
             <i class="fab fa-node-js"></i>
           </div>
           <h2 class="major__title">Back-end</h2>
-          <div class="major__description">Express.js</div>
+          <div class="major__description">
+            Express.js<br />MongoDB<br />MySQL
+          </div>
         </div>
         <div class="major">
           <div class="major__icon">
@@ -147,16 +149,16 @@
             </div>
             <div class="skill">
               <div class="skill_description">
-                <span>React.js</span>
-                <span>50%</span>
+                <span>Express.js</span>
+                <span>80%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill_value" style="width: 50%"></div>
+                <div class="skill_value" style="width: 80%"></div>
               </div>
             </div>
             <div class="skill">
               <div class="skill_description">
-                <span>Express.js</span>
+                <span>React.js</span>
                 <span>60%</span>
               </div>
               <div class="skill_bar">
@@ -219,19 +221,16 @@
       <h1>Projects</h1>
       <div class="work__categories">
         <button class="category__btn selected" data-filter="*">
-          All<span class="category__count">2</span>
+          All<span class="category__count">4</span>
         </button>
-        <button class="category__btn" data-filter="basic">
-          Web basic<span class="category__count">1</span>
+        <button class="category__btn" data-filter="fe">
+          FE<span class="category__count">2</span>
         </button>
-        <button class="category__btn" data-filter="react">
-          React.js<span class="category__count">0</span>
+        <button class="category__btn" data-filter="be">
+          BE<span class="category__count">2</span>
         </button>
-        <button class="category__btn" data-filter="express">
-          Express.js<span class="category__count">1</span>
-        </button>
-        <button class="category__btn" data-filter="flutter">
-          Flutter<span class="category__count">0</span>
+        <button class="category__btn" data-filter="app">
+          App<span class="category__count">0</span>
         </button>
       </div>
 
@@ -241,7 +240,7 @@
           href="https://github.com/gyujh630/portfolio"
           class="project"
           target="_blank"
-          data-type="basic"
+          data-type="fe"
         >
           <img
             class="project_img"
@@ -249,24 +248,16 @@
             alt="pr_img"
           />
           <div class="project_description">
-            <h3>Portfolio Web</h3>
+            <h3>Portfolio</h3>
             <div class="project_line"></div>
-            <span>- HTML/CSS<br />- JavaScript</span>
+            <span>- HTML / CSS<br />- Vanilla JS</span>
           </div>
         </a>
-        <!-- <a href="" class="project" target="_blank" data-type="react">
-          <img class="project_img" src="imgs/projects/admin.png" alt="pr_img" />
-          <div class="project_description">
-            <h3>Example</h3>
-            <div class="project_line"></div>
-            <span>react</span>
-          </div>
-        </a> -->
         <a
-          href="https://github.com/gyujh630/the-golf-api-server"
+          href="https://github.com/gyujh630/the-golf-api"
           class="project"
           target="_blank"
-          data-type="express"
+          data-type="be"
         >
           <img
             class="project_img"
@@ -276,17 +267,49 @@
           <div class="project_description">
             <h3>THE GOLF</h3>
             <div class="project_line"></div>
-            <span>- Express.js<br />- 골프웨어 쇼핑몰 api 구현</span>
+            <span>- 골프웨어 쇼핑몰<br />- Express.js<br />- MongoDB</span>
           </div>
         </a>
-        <!-- <a href="" class="project" target="_blank" data-type="flutter">
-          <img class="project_img" src="imgs/projects/admin.png" alt="pr_img" />
+        <a
+          href="https://github.com/gyujh630/AU_LikeLion_Hackathon"
+          class="project"
+          target="_blank"
+          data-type="fe"
+        >
+          <img
+            class="project_img"
+            src="imgs/projects/다가치.png"
+            alt="pr_img"
+          />
           <div class="project_description">
-            <h3>Example</h3>
+            <h3>DA가치</h3>
+            <span style="font-size: 12px"
+              >멋쟁이사자처럼 아주대 11기 중앙해커톤</span
+            >
             <div class="project_line"></div>
-            <span>react</span>
+            <span>- 디지털 기기 기부 플랫폼<br />- React.js</span>
           </div>
-        </a> -->
+        </a>
+        <a
+          href="https://github.com/gyujh630/dining-together-api"
+          class="project"
+          target="_blank"
+          data-type="be"
+        >
+          <img
+            class="project_img"
+            src="imgs/projects/회식어때.png"
+            alt="pr_img"
+          />
+          <div class="project_description">
+            <h3>회식어때</h3>
+            <div class="project_line"></div>
+            <span
+              >- 단체회식 예약 플랫폼<br />- Express.js<br />- TypeScript<br />-
+              MySQL</span
+            >
+          </div>
+        </a>
       </div>
     </section>
 
