--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
             </div>
             <div class="skill">
               <div class="skill_description">
+                <span>TypeScript</span>
+                <span>40%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 80%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
                 <span>Express.js</span>
                 <span>80%</span>
               </div>
@@ -163,15 +172,6 @@
               </div>
               <div class="skill_bar">
                 <div class="skill_value" style="width: 60%"></div>
-              </div>
-            </div>
-            <div class="skill">
-              <div class="skill_description">
-                <span>C/C++</span>
-                <span>70%</span>
-              </div>
-              <div class="skill_bar">
-                <div class="skill_value" style="width: 70%"></div>
               </div>
             </div>
             <div class="skill">
