Rename: img file

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         >
           <img
             class="project_img"
-            src="imgs/projects/다가치.png"
+            src="imgs/projects/DAGACHI.png"
             alt="pr_img"
           />
           <div class="project_description">
@@ -298,7 +298,7 @@
         >
           <img
             class="project_img"
-            src="imgs/projects/회식어때.png"
+            src="imgs/projects/diningTogether.png"
             alt="pr_img"
           />
           <div class="project_description">
