--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <span>40%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill_value" style="width: 80%"></div>
+                <div class="skill_value" style="width: 40%"></div>
               </div>
             </div>
             <div class="skill">
@@ -177,10 +177,19 @@
             <div class="skill">
               <div class="skill_description">
                 <span>Python</span>
-                <span>80%</span>
+                <span>60%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill_value" style="width: 80%"></div>
+                <div class="skill_value" style="width: 60%"></div>
+              </div>
+            </div>
+              <div class="skill">
+              <div class="skill_description">
+                <span>Java</span>
+                <span>50%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 50%"></div>
               </div>
             </div>
             <div class="skill">
